2007-05-04  Sven Schuetz <sven@de.ibm.com>

	* cimXmlOps.y, cimXmlParser.c, cimXmlRequest.c:
	Fixed 1712545: wrong results in association operations
	
	* cimXmlParser.c:
	Fixed 1712582: parser does not accept type attribute in KEYVALUE tag
	
2007-05-02  Sven Schuetz <sven@de.ibm.com>

	* queryStatement.c:
	Fixed 1711283: minor mem problem in qsRelease

2007-04-27  Adrian Schuur

	* support.c, support.h, providerRegister.c, providerRegister.h,
	providerDrv.c:
	New feature 1708578: Execution time parameters for providers

2007-04-27  Sven Schuetz <sven@de.ibm.com>

	* providerRegister.c, providerRegister.h:
	Fixed 1708568: providers for multiple classes are invoked only once

2007-04-26  Sven Schuetz <sven@de.ibm.com>

	* interopProvider.c:
	Fixed 1708071: interopProvider chokes on getinstance

2007-04-23  Sven Schuetz <sven@de.ibm.com>

	* interopProvider.c:
	Fixed 1702310: indProv segfaults while ci with NULL query

2007-04-17  Sven Schuetz <sven@de.ibm.com>

	* interopServerProvider.c:
	Fixed 1701174: Bug with ein on classes in interop namespace

2007-04-11  Sven Schuetz <sven@de.ibm.com>

	* providerMgr.c:
	Fixed 1697772: provider resolution can fail for associators

2007-04-05  Sven Schuetz <sven@de.ibm.com>

	* indCIMXMLExport.c, indCIMXMLHandler.c:
	Fixed 1693675: delivering an indication can lock sfcb

2007-04-03  Sven Schuetz <sven@de.ibm.com>

	* queryOperation.c:
	Fixed 169353: problem with certain queries
	
	* instance.c:
	2nd fix for 1690525: instance comparison might fail in case of NULL
	pointer

2007-03-29  Sven Schuetz <sven@de.ibm.com>

	* value.c:
	Fixed 1690525: instance comparison might fail in case of NULL pointer

2007-03-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* providerDrv.c: 
	Fixed 1690034: garbage principal occurrences.
	The original patch for sfcb 1.1 hasn't fixed all the occurrences
	of invalid CMPIPrincipal passing into the context. This is
	corrected now.

	* instance.c: 